--- a/config/config.json.example
+++ b/config/config.json.example
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "postgres",
-    "password": "sunibngalam",
+    "password": "",
     "database": "bingleshop",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "sunibngalam",
+    "password": "",
     "database": "bingleshop",
     "host": "127.0.0.1",
     "dialect": "postgres",
@@ -16,7 +16,7 @@
   },
   "production": {
     "username": "postgres",
-    "password": "sunibngalam",
+    "password": "",
     "database": "bingleshop",
     "host": "127.0.0.1",
     "dialect": "postgres",
